--- a/main.html
+++ b/main.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=
+    , initial-scale=1.0">
+    <title>Document</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <main>
+        Class: accio
+        ID: job
+        <p>
+            Class: hello-accio
+            Text Context: Hello Accio job
 
+        </p>
+    </main>
 </body>
-
 </html>
